# QuantumQuipu_NoiseAndNativeGates

./: Anaconda Powershell Prompt (Womanium2023).lnk  README.md  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Codigo/: Como ejecutar circuito en hardware de IBM Quantum.ipynb  Creating a circuit cost function.ipynb  Creating cost functions.ipynb  Grupo_Error_II.ipynb  Simulacion de ruido en Algoritmo de Grover.ipynb  Simulacion_Ruido_1.ipynb  Victor_Cost_functions.ipynb  example_idea.ipynb
Codigo/.ipynb_checkpoints/: Creating a circuit cost function-checkpoint.ipynb  Creating cost functions-checkpoint.ipynb  Creating_cost_functionsCOLAB-checkpoint.ipynb  Simulacion de ruido en Algoritmo de Grover-checkpoint.ipynb  Untitled-checkpoint.ipynb
Codigo/NoiseModel/: Canal de Relajacion y Desfase.ipynb
Codigo/QPL_experiment/: Untitled-Copy2.ipynb  Untitled.ipynb  dibujosqpl.drawio  ibm_brisbane_fake.csv  ibm_brisbane_qpu_result.json  ibm_brisbane_randomcircuit_depth20  ibm_brisbane_randomcircuit_depth30  ibm_kyoto.csv  (+28 more)
Material Bibliográfico/: links.txt
Notas/: Construyendo modelos de ruido con Qiskit.docx  Lectura-2.ipynb  Matrices de densidad.docx  MatrizDensidad.ipynb  Reduccion de ratio de error de single qubit gates.docx  Resumen Modelling and Simulating the Noisy Behaviour.docx  ~$duccion de ratio de error de single qubit gates.docx  ~$nstruyendo modelos de ruido con Qiskit.docx  ~$trices de densidad.docx
Presentacion Escuela de computacion cuantica en español/: Simulación y reducción de ruido utilizando compuertas nativas.pptx  Untitled.ipynb
(+24 files in other folders)
